# TitanManPortal

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements
requirements/: DEV-requirements.txt  PRD-requirements.txt
titanmanportal/: manage.py
titanmanportal/_config/: __init__.py  env_config.py  settings.py
titanmanportal/_utils/: __init__.py  utils.py
titanmanportal/apps/moderation/: __init__.py  admin.py  apps.py  models.py
titanmanportal/apps/moderation/migrations/: 0001_initial.py
titanmanportal/apps/moderation/services/: __init__.py  moder_service.py  moderation.py
titanmanportal/apps/periods/: __init__.py  admin.py  apps.py  models.py
titanmanportal/apps/periods/services/: __init__.py  period_service.py
titanmanportal/apps/rating/: admin.py  models.py
titanmanportal/apps/rating/migrations/: 0001_initial.py  0002_auto_20200409_1231.py  0003_auto_20200621_2154.py
titanmanportal/apps/rating/services/: __init__.py  (+1 more)
titanmanportal/apps/users/: admin.py  apps.py  models.py  urls.py
titanmanportal/config/: __init__.py  asgi.py  env_config.py  env_settings.py  log_config.py  settings.py  urls.py  wsgi.py
titanmanportal/moderation/: admin.py  apps.py  models.py  services.py
titanmanportal/moderation/migrations/: 0002_auto_20200409_1231.py  0003_auto_20200629_2324.py  0004_auto_20200629_2337.py  0005_auto_20200705_1750.py  0006_auto_20200725_1948.py  0007_auto_20200726_0036.py  0008_auto_20200726_1323.py  0009_auto_20200727_1711.py  0010_auto_20200802_1349.py  0011_auto_20200802_1908.py
titanmanportal/moderation/services/: moder_service.py
titanmanportal/moderation/tests/: tests.py
titanmanportal/periods/: __init__.py  apps.py  models.py  services.py  tests.py
titanmanportal/periods/migrations/: 0001_initial.py
titanmanportal/periods/services/: __init__.py  period_service.py
titanmanportal/rating/: admin.py  apps.py  models.py  services.py
titanmanportal/rating/migrations/: 0004_auto_20200629_2137.py  0005_auto_20200629_2324.py  0006_auto_20200802_1908.py
titanmanportal/rating/services/: rating_service.py
titanmanportal/rating/tests/: tests.py
titanmanportal/requirements/: requirements-DEV.txt  requirements-PRD.txt
titanmanportal/titanmanportal/: __init__.py  asgi.py  config.py  defaults.py  env_settings.py  settings.py  urls.py  wsgi.py
titanmanportal/users/: admin.py  apps.py  models.py  services.py  socialaccount_adapter.py
titanmanportal/users/fixtures/: adminuser.yaml  groups.yaml
titanmanportal/users/migrations/: 0001_initial.py  0004_auto_20200417_1231.py
titanmanportal/users/services/: profile_service.py
titanmanportal/users/signals/: handlers.py
titanmanportal/utils/: __init__.py  models.py
(+11 files in other folders)
