[tool]
[tool.poetry]
name = "TitanManPortal"
version = "0.1.0"
description = """\
  TitanManPortal is a django admin app espesially \
  for titanman.com. It provids functionality to manage \
  the club members' goals and moderate their proofs.\
  """
readme = "README.md"
authors = ["Artem Shakurov <galavasteg@gmail.com>"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
repository = "https://github.com/galavasteg/TitanManPortal"

packages = [
    {include = "titanmanportal"},
]

[tool.poetry.dependencies]
python = "~3.8"
Django = "~3"
django-allauth = "~0.42"
django-fsm = "~2.7"
django-material-admin = "^1.7.8"
django-modeladmin-reorder = "^0.3.1"
django-phonenumber-field = "~4"
phonenumbers = "~8"
Pillow = "~7"
PyYAML = "~5"
uvicorn = "~0.11.3"
uvloop = { version = "~0.14.0", markers = "sys_platform != 'win32'" }

[tool.poetry.dev-dependencies]
python-dotenv = "~0.14.0"

[build-system]
requires = ["poetry>=1.0.9"]
build-backend = "poetry.masonry.api"
